--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beneficial-gamma",
+  "name": "Hayato_Isagawa_Portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,5 +10,8 @@
   },
   "dependencies": {
     "astro": "^5.3.0"
+  },
+  "volta": {
+    "node": "22.14.0"
   }
 }
