--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.3.0"
+    "@astrojs/react": "^4.2.0",
+    "@react-three/drei": "^9.121.5",
+    "@react-three/fiber": "^8.17.14",
+    "@types/react": "^19.0.9",
+    "@types/react-dom": "^19.0.3",
+    "astro": "^5.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "three": "^0.173.0",
+    "three-mesh-bvh": "^0.8.0"
   },
   "volta": {
     "node": "22.14.0"
